<resources>
    <string name="app_name">TrackYourStress</string>
    <string name="welcome_text">Herzlich willkommen bei TrackYourStress!</string>
    <string name="TrackYourStressLogo">Das Logo von TrackYourStress: Ein Yin/Yang-Symbol in blau und gelb.</string>
    <string name="Login_text">Login</string>
    <string name="Register_text">Registrieren</string>
    <string name="title_activity_login">Login</string>
    <string name="Email">Email</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string name="password_confirm">Passwort bestätigen</string>
    <string name="username">Nutzername</string>
    <string name="register_link_send">Die Registrierigung wurde durchgeführt und Ihnen wurde <br /> ein Link zur Verifizierung an die angegebenen Email gesendet. Bitte bestätigen
        Sie Ihren Account indem Sie darauf klicken. <br />Danach können Sie sich einloggen.</string>
    <string name="resend_verification_link">Verifizierungs-Link noch einmal senden</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="sex">Geschlecht</string>
    <string name="male">Männlich</string>
    <string name="female">Weiblich</string>
    <string name="not_known">Keine Angabe</string>
    <string name="submit">Abschicken</string>
    <string name="change_password">Password ändern</string>
    <string name="delete_profile">Profil löschen</string>
    <string name="turn_on_all_notifications">Alle Benachrichtigungen</string>
    <string name="turn_on_daily_notifications">Tägliche Benachrichtigungen</string>
    <string name="turn_on_weekly_notifications">Wöchentliche Benachrichtigungen</string>
    <string name="manage_notifications">Benachrichtigungen verwalten</string>
    <string name="turn_on_monthly_notifications">Monatliche Benachrichtigungen</string>
    <string name="off">AUS</string>
    <string name="on">AN</string>
    <string name="daily_notifications_on">Tägliche Benachrichtigungen AN</string>
    <string name="weekly_notfications_on">Wöchentliche Benachrichtigungen AN</string>
    <string name="monthly_notifications_on">Monatliche Benachrichtigungen AN</string>
    <string name="weekly_notifications_off">Wöchentliche Benachrichtigungen AUS</string>
    <string name="channel_daily_notifications">TrackYourStress - Täglicher Fragebogen</string>
    <string name="channel_id_daily">1</string>
    <string name="title_questionnaire">Titel</string>
    <string name="running">Laufend</string>
    <string name="repeatable">Wiederholbar</string>
    <string name="type">Typ</string>
    <string name="do_you_really_want_to_delete_your_profile">Möchten Sie Ihr Profil sicher löschen?</string>
    <string name="ok">OK</string>
    <string name="cancel">Abbruch</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="myActivities">Aktivitäten</string>
    <string name="profile">Profil</string>
    <string name="activities">Aktivitäten</string>
    <string name="questionnaires">Fragebögen</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="logout">Logout</string>
    <string name="about_us">Über uns</string>
    <string name="options">Optionen</string>
    <string name="home" translatable="false">Home</string>
    <string name="home_text">Mit TrackYourStress können Sie Ihre individuellen Schwankungen des Stress-Levels mittels einer Smartphone App erfassen. Mit Hilfe ihres Smartphones können Sie die Schwankungen Ihres Stress-Levels systematisch erfassen und herausfinden womit diese zusammenhängen.</string>
    <string name="confirmSaveData">Ich bin einverstanden, dass die App TrackYourStress Daten auf meinem Gerät speichert</string>
    <string name="imprint_text_raw">
    Impressum
\n\nHerausgeber

\nTinnitus Research Initiative
\nFoundation
\Universitätsstrasse 84
\n93053 Regensburg
\nphone: +49 941 941 2096
\nfax: +49 941 941 2925
\ne-mail: foundation@tinnitusresearch.org
\nUmsatzsteueridentifikationsnummer DE133714227
\n
\nDie Stiftung Tinnitus Research Initiative ist mit Urkunde vom 01.02.2010 Nr. B 1.1-1222.184-1 gemäß §§ 80, 81 des Bürgerlichen Gesetzbuches eine rechtsfähige Stiftung des bürgerlichen Rechts mit Sitz in Regensburg. Aufgrund ihrer Satzungsbestimmungen und den entsprechenden stiftungsrechtlichen Vorschriften (Art. 10 Abs. 1 BayStG) der staatlichen Stiftungsaufsicht, Regierung der Oberpfalz. Die Körperschaft dient ausschließlich und unmittelbar steuerbegünstigten Zwecken.
\Vertretungsberechtigt ist der Stiftungsvorstand:

\Dr. med. Berthold Langguth, Regensburg, Deutschland (Vorsitzender)
\nProf. Ana Belén Elgoyhen, Buenos Aires, Argentinen
\nProf. Dirk De Ridder, Antwerpen, Belgien
\n\nZuständige Aufsichtsbehörde:

\nRegierung der Oberpfalz
\nEmmeramsplatz 8
\n93047 Regensburg
\nDeutschland
\n\nInhalt

\nVerantwortlich im Sinne des §5 TMG:
\nDr. Winfried Schlee
\nTinnitus Research Initiative
\nFoundation
\nUniversitätsstrasse 84
\n93053 Regensburg
\nphone: +49 941 941 2096
\ne-mail: winfried.schlee@tinnitusresearch.org
\n\nKonzeption und technische Umsetzung
\n
\nJulia Abramenko
\nInstitut für Datenbanken und Informationssysteme der Universität Ulm
\nemail: Julia.Abramenko@uni-ulm.de
\n
\nPascal Damasch
\nInstitut für Datenbanken und Informationssysteme der Universität Ulm
\nemail: Pascal.Damasch@uni-ulm.de
\n
\nJochen Herrmann
\nInstitut für Datenbanken und Informationssysteme der Universität Ulm
\nemail: Jochen.Herrmann@uni-ulm.de
\n
\nRüdiger Pryss
\nInstitut für Datenbanken und Informationssysteme der Universität Ulm
\nemail: Rüdiger.Pryss@uni-ulm.de
\n\nHaftungsausschluss

\nMit Trackyourstress.com wird ein Service zur Messung der individuellen Tinnitusbelastung angeboten. Sie haben die Möglichkeiten Ihre Daten einzusehen und mit ihrem behandelnden Arzt oder Therapeuten zu besprechen. Eine Garantie für die Richtigkeit und juristische Verwertbarkeit der Daten kann weder von Seiten der Tinnitus Research Initiative noch von Mitarbeitern des Trackyourtinnitus Projektes gegeben werden.
Trackyourstress.com ist kein Medizinprodukt

\nWir möchten ausdrücklich darauf hinweisen, dass wir mit Trackyourstress.com kein Medizinprodukt bereitstellen. Eine Behandlung von Stress ist nicht intendiert.
\n
\Eine Verschlechterung des Stresses ist nicht zu erwarten. Sollten Sie dennoch negative Veränderungen bemerken, beenden sie bitte unverzüglich die Teilnahme und suchen Ihren Arzt oder Therapeuten auf.
Haftungsausschluss bei Links zu externen Inhalten
\n
\nWir sind als Inhaltsanbieter für die eigenen Inhalte, die sie zur Nutzung bereithält, nach den allgemeinen Gesetzen verantwortlich. Von diesen eigenen Inhalten sind Querverweise auf die von anderen Anbietern bereitgehaltenen Inhalte zu unterscheiden. Diese fremden Inhalte stammen weder von uns, noch haben wir die Möglichkeit, den Inhalt von Seiten Dritter zu beeinflussen.
\n
\nDie Inhalte fremder Seiten, spiegeln nicht unsere Meinung wider, sondern dienen lediglich der Information und der Darstellung von Zusammenhängen.
\n\nDatenschutz
\nWir sind uns bewusst, dass wir mit dem Service von Trackyourstress.com hochsensible Daten speichern und verwenden daher die höchsten Standards des Datenschutzes um die Sicherheit und Diskretion ihrer Daten zu gewährleisten.
\n
\nIhre Daten werden vollständig anonymisiert verarbeitet und gespeichert. Ein Rückschluss auf ihre Identität ist zu keinem Zeitpunkt möglich. Wir werden sie nie nach Ihrem vollständigen Namen, Ihrer Telefonnummer, Ihrer Adresse oder anderen Kontaktdaten fragen. Die IP-Adresse Ihres Computers wird nicht gespeichert und jeder Datenaustausch über das Internet ist mit SSL-Verschlüsselung gesichert.
\n
\nDas Angeben einer Email-Adresse ist nicht notwendig, wird aber ausdrücklich empfohlen. Die Email-Adresse wird nur zur Wiederherstellung des Passwortes verwendet, wenn Sie ihre Zugangsdaten vergessen haben.
\n
\nWenn sie ihre Email-Adresse nicht angeben wollen, können sie dennoch den kompletten Service von Trackyourstress.com uneingeschränkt verwenden.
\n
\nDie wissenschaftlichen Erkenntnisse aus diesem Forschungsprojekt können in wissenschaftlichen Fachzeitschriften veröffentlich werden. Dabei wird es jedoch nicht möglich sein, Ihre persönlichen Informationen zu identifizieren.
    </string>
    <string name="Back">Zurück</string>
    <string name="not_applicable">Nicht zutreffend</string>
    <string name="german_flag_description">Deutsche Flagge zur Sprachauswahl</string>
    <string name="english_flag_description">Englische Flagge zur Sprachauswahl</string>
    <string name="language_settings">Spracheinstellungen</string>
    <string name="login">Login</string>
</resources>