<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >


<TextView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/username" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/Email" />

    <TextView
    android:id="@+id/first_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/first_name" />

    <EditText
        android:id="@+id/edit_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/edit_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sex_radio_group"
        android:gravity="center"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_sex_not_known"
            android:text="@string/not_known"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_male"
            android:text="@string/male"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_female"
            android:text="@string/female"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_not_applicable"
            android:text="@string/not_applicable"/>
    </RadioGroup>

    <Button
        android:id="@+id/submit_button_update_profile"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="8dp"
        android:padding="6dp"
        android:text="@string/submit">

    </Button>

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:text="@string/change_password">

    </Button>

    <Button
        android:id="@+id/button_delete_profile"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="8dp"
        android:padding="6dp"
        android:text="@string/delete_profile">

    </Button>

</LinearLayout>