<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Welcome_Logo"
        android:layout_width="235dp"
        android:layout_height="268dp"
        android:contentDescription="@string/TrackYourStressLogo"
        app:layout_constraintBottom_toTopOf="@+id/welcome_text_first_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793"
        app:srcCompat="@mipmap/logo_trackyourstress_round" />

    <TextView
        android:id="@+id/welcome_text_first_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro"
        android:text="@string/welcome_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:text="@string/Login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:text="@string/Register_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

</androidx.constraintlayout.widget.ConstraintLayout>